googleVis 0.6.9 [2020-11-05]
----------------------------

Changes

 o Fixed URLs to comply with CRAN checks
 

googleVis 0.6.8 [2020-11-03]
----------------------------

Changes

 o Fixed URLs to comply with CRAN checks
 

googleVis 0.6.7 [2020-10-27]
----------------------------

Changes

 o Removed dependency on package knitcitations

 googleVis 0.6.6 [2020-07-08]
----------------------------

Changes
 
 o Changed option in YAML header of vignette to 
   self_contained: false, as otherwise the plots 
   are not displayed
 o Re-organised vignettes and use HTML output only

googleVis 0.6.5 [2020-06-08]
----------------------------

Changes

 o Updated URLs to Google's online documentation

googleVis 0.6.4 [2019-05-16]
----------------------------

Changes

 o added gvisWordTree function. 
   Thanks to Ashley Baldry for contributing the code.


googleVis 0.6.3 [2018-11-09]
----------------------------

Bug fixes 

 o Corrected URL for gvisCalendar documentation by Google
 o Allow for numeric colorvar input for gvisBubbleChart to create 
   a gradient color scale


googleVis 0.6.2 [2017-01-01]
----------------------------

Changes

  o Updated links to omegahat from omegahat.org
    to omegahat.net as requested by CRAN


googleVis 0.6.1 [2016-09-01]
----------------------------

Changes

 o Flash based charts gvisGeoMap and gvisAnnotatedTimeLine will 
   show a warning, reminding users to switch to the HTML5 charts
   gvisGeoChart and gvisAnnotationChart instead.
 
 
Bug fixes 

 o In some cases option settings were not converted 
   porperly into JSON objects.  


googleVis 0.6.0 [2016-07-04]
----------------------------

Changes

 o Changed package dependency from RJSONIO to jsonlite.
   
 o Change demo AnimatedGeoMap to AnimatedGeoChart


googleVis 0.5.10 [2015-08-26]
----------------------------

Bug fixes 

 o Ordered factors were ignored. 
   Thanks to Carsten Langer for reporting this issue.


googleVis 0.5.9 [2015-07-04]
----------------------------

Changes